Display health, added neat, other styles/images

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,4 +1,12 @@
 @charset "UTF-8";
+html {
+  box-sizing: border-box; }
+
+*,
+*::after,
+*::before {
+  box-sizing: inherit; }
+
 /*!
  *  Font Awesome 4.4.0 by @davegandy - http://fontawesome.io - @fontawesome
  *  License - http://fontawesome.io/license (Font: SIL OFL 1.1, CSS: MIT License)
@@ -2020,5 +2028,89 @@
 
 body {
   background: #e2ebf3; }
+
+.container {
+  float: left;
+  display: block;
+  margin-right: 2.35765%;
+  width: 100%; }
+  .container:last-child {
+    margin-right: 0; }
+  .container .friend {
+    float: left;
+    display: block;
+    margin-right: 2.35765%;
+    width: 31.76157%; }
+    .container .friend:last-child {
+      margin-right: 0; }
+  .container .friend img {
+    width: 300px;
+    margin-top: 50px; }
+  .container .totoro {
+    float: left;
+    display: block;
+    margin-right: 2.35765%;
+    width: 31.76157%;
+    color: white; }
+    .container .totoro:last-child {
+      margin-right: 0; }
+  .container .totoro .health .healthAmt {
+    position: absolute;
+    left: 29px;
+    z-index: 10;
+    top: 20px;
+    font-size: 26px;
+    font-weight: bold; }
+  .container .totoro img {
+    width: 200px; }
+  .container .life {
+    float: left;
+    display: block;
+    margin-right: 2.35765%;
+    width: 31.76157%; }
+    .container .life:last-child {
+      margin-right: 0; }
+  .container .life img {
+    height: 400px; }
+
+.health {
+  position: relative;
+  width: 100px;
+  height: 90px; }
+
+.health:before,
+.health:after {
+  position: absolute;
+  content: "";
+  left: 50px;
+  top: 0;
+  width: 50px;
+  height: 80px;
+  background: pink;
+  -moz-border-radius: 50px 50px 0 0;
+  border-radius: 50px 50px 0 0;
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  -webkit-transform-origin: 0 100%;
+  -moz-transform-origin: 0 100%;
+  -ms-transform-origin: 0 100%;
+  -o-transform-origin: 0 100%;
+  transform-origin: 0 100%; }
+
+.health:after {
+  left: 0;
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg);
+  -webkit-transform-origin: 100% 100%;
+  -moz-transform-origin: 100% 100%;
+  -ms-transform-origin: 100% 100%;
+  -o-transform-origin: 100% 100%;
+  transform-origin: 100% 100%; }
 
 /*# sourceMappingURL=main.css.map */
