--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,93 @@
 @import "bourbon";
+@import "neat/neat";
 @import "font-awesome";
 
 body {
   background: #e2ebf3;
 }
+
+.container{
+	@include span-columns(12);
+
+	.friend {
+		@include span-columns(4);
+	}
+
+	.friend img {
+		width: 300px;
+		margin-top: 50px;
+	}
+
+	.totoro {
+		@include span-columns(4);
+		color: white;
+	}
+
+	.totoro .health .healthAmt {
+		position: absolute;
+		left: 29px;
+    z-index: 10;
+    top: 20px;
+    font-size: 26px;
+    font-weight: bold;
+	}
+
+	.totoro img {
+		width: 200px;
+
+	}
+
+	.life {
+		@include span-columns(4);
+	}
+
+	.life img {
+		height: 400px;
+	}
+
+}
+
+
+.health {
+    position: relative;
+    width: 100px;
+    height: 90px;
+}
+.health:before,
+.health:after {
+    position: absolute;
+    content: "";
+    left: 50px;
+    top: 0;
+    width: 50px;
+    height: 80px;
+    background: pink;
+    -moz-border-radius: 50px 50px 0 0;
+    border-radius: 50px 50px 0 0;
+    -webkit-transform: rotate(-45deg);
+       -moz-transform: rotate(-45deg);
+        -ms-transform: rotate(-45deg);
+         -o-transform: rotate(-45deg);
+            transform: rotate(-45deg);
+    -webkit-transform-origin: 0 100%;
+       -moz-transform-origin: 0 100%;
+        -ms-transform-origin: 0 100%;
+         -o-transform-origin: 0 100%;
+            transform-origin: 0 100%;
+}
+.health:after {
+    left: 0;
+    -webkit-transform: rotate(45deg);
+       -moz-transform: rotate(45deg);
+        -ms-transform: rotate(45deg);
+         -o-transform: rotate(45deg);
+            transform: rotate(45deg);
+    -webkit-transform-origin: 100% 100%;
+       -moz-transform-origin: 100% 100%;
+        -ms-transform-origin: 100% 100%;
+         -o-transform-origin: 100% 100%;
+            transform-origin :100% 100%;
+}
+
+
+
