--- a/app/css/main.css
+++ b/app/css/main.css
@@ -2181,4 +2181,11 @@ body {
   .computer-friend:last-child {
     margin-right: 0; }
 
+.ch {
+  border: 1px solid black;
+  padding: 10px;
+  font-size: 20px;
+  max-width: 90%;
+  margin: 10px auto; }
+
 /*# sourceMappingURL=main.css.map */
