--- a/app/css/main.css
+++ b/app/css/main.css
@@ -2043,10 +2043,11 @@ body {
     display: block;
     margin-right: 2.35765%;
     width: 31.76157%;
-    border: 1px solid black;
     height: 409px; }
     .container .friend:last-child {
       margin-right: 0; }
+    .container .friend h2 {
+      margin-left: 5px; }
   .container .make-friend {
     margin-left: 36%;
     margin-top: 10%;
@@ -2061,8 +2062,7 @@ body {
     display: block;
     margin-right: 2.35765%;
     width: 31.76157%;
-    color: white;
-    border: 1px solid black; }
+    color: white; }
     .container .totoro:last-child {
       margin-right: 0; }
   .container .totoro .health .healthAmt {
@@ -2080,8 +2080,7 @@ body {
     display: block;
     margin-right: 2.35765%;
     width: 31.76157%;
-    margin-right: 0;
-    border: 1px solid black; }
+    margin-right: 0; }
     .container .life:last-child {
       margin-right: 0; }
   .container .life img {
@@ -2139,9 +2138,11 @@ body {
   margin-right: 2.35765%;
   width: 31.76157%;
   display: none;
-  border: 1px solid black; }
+  background-color: white; }
   .friend-arena:last-child {
     margin-right: 0; }
+  .friend-arena h2 {
+    margin-left: 5px; }
   .friend-arena .friend-choices button {
     display: block;
     margin: 10px; }
@@ -2153,7 +2154,7 @@ body {
   width: 31.76157%;
   margin-right: 0;
   display: none;
-  border: 1px solid black; }
+  background-color: white; }
   .enemy-arena:last-child {
     margin-right: 0; }
   .enemy-arena .life-choices button {
@@ -2166,8 +2167,7 @@ body {
   margin-right: 2.35765%;
   width: 31.76157%;
   margin-right: 0;
-  display: none;
-  border: 1px solid black; }
+  display: none; }
   .computer-enemy:last-child {
     margin-right: 0; }
 
@@ -2176,13 +2176,14 @@ body {
   display: block;
   margin-right: 2.35765%;
   width: 31.76157%;
-  display: none;
-  border: 1px solid black; }
+  display: none; }
   .computer-friend:last-child {
     margin-right: 0; }
 
 .ch {
   border: 1px solid black;
+  border-radius: 3px;
+  background-color: white;
   padding: 10px;
   font-size: 20px;
   max-width: 90%;
