--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,8 +12,11 @@ body {
 
 	.friend {
 		@include span-columns(4);
-		border: 1px solid black;
 		height: 409px;
+
+		h2 {
+			margin-left: 5px;
+		}
 	}
 
 	.make-friend{
@@ -32,7 +35,6 @@ body {
 	.totoro {
 		@include span-columns(4);
 		color: white;
-		border: 1px solid black;
 	}
 
 	.totoro .health .healthAmt {
@@ -52,7 +54,6 @@ body {
 	.life {
 		@include span-columns(4);
 		@include omega();
-		border: 1px solid black;
 	}
 
 	.life img {
@@ -118,7 +119,11 @@ body {
 .friend-arena {
 	@include span-columns(4);
 	display: none;
-	border: 1px solid black;
+	background-color: white;
+
+	h2 {
+		margin-left: 5px;
+	}
 
 	.friend-choices button {
 		display: block;
@@ -130,7 +135,7 @@ body {
 	@include span-columns(4);
 	@include omega();
 	display: none;
-	border: 1px solid black;
+	background-color: white;
 
 	.life-choices button {
 		display: block;
@@ -142,18 +147,17 @@ body {
 	@include span-columns(4);
 	@include omega();
 	display: none;
-	border: 1px solid black;
 }
 
 .computer-friend {
 	@include span-columns(4);
 	display: none;
-	border: 1px solid black;
-
 }
 
 .ch {
 	border: 1px solid black;
+	border-radius: 3px;
+	background-color: white;
 	padding: 10px;
 	font-size: 20px;
 	max-width: 90%;
