--- a/sass/main.scss
+++ b/sass/main.scss
@@ -114,6 +114,44 @@ body {
 
 // Hidden Classes
 
+	.f-instructions {
+		max-width: 80%;
+		margin: 0 auto;
+		display: none;
+		border: 1px solid black;
+		border-radius: 3px;
+		padding: 5px;
+
+		button {
+			width: 200px;
+			background: none;
+			margin-left: 39%;
+			margin-bottom: 1%;
+			padding: 5px;
+			border: 1px solid black;
+			border-radius: 3px;
+		}
+	}
+
+	.e-instructions {
+		max-width: 80%;
+		margin: 0 auto;
+		display: none;
+		border: 1px solid black;
+		border-radius: 3px;
+		padding: 5px;
+
+		button {
+			width: 200px;
+			background: none;
+			margin-left: 39%;
+			margin-bottom: 1%;
+			padding: 5px;
+			border: 1px solid black;
+			border-radius: 3px;
+		}
+	}
+
 	.totoro {
 		@include span-columns(4);
 		color: white;
